	definition and all uses.
	(pid_to_handle, handle_to_pid): Remove as they are ununsed.
	* assuan-io.c (_assuan_simple_write, _assuan_simple_read) [W32]:
	Make use of HANDLE2SOCKET.
	* assuan-socket.c (_assuan_close) [W32]: Use CloseHandle and not
	close.
	* assuan-handler.c (assuan_get_active_fds) [W32]: Use
	_get_osfhandle for the data fp.

2007-07-08  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-defs.h (struct assuan_context_s): Have full peercred
	structure for HAVE_SO_PEERCRED.
	* assuan-connect.c (assuan_get_peercred) [!HAVE_SO_PEERCRED]: Do
	not try to set PID, UID and GID.

2007-07-05  Werner Koch  <wk@g10code.com>

	* assuan-defs.h (struct assuan_context_s): Have peercred.valid
	even for Windows.  This makes some other code cleaner.

	* assuan.h (ASSUAN_CONFIDENTIAL): New flag.
	* assuan-util.c (assuan_set_flag, assuan_get_flag): Support flag.

2007-07-04  Marcus Brinkmann  <marcus@g10code.de>

	Change _WIN32 to HAVE_W32_SYSTEM for consistency.

	* assuan-defs.h (struct assuan_context_s): Have full peercred
	structure even if not HAVE_SO_PEERCRED, but not if
	HAVE_W32_SYSTEM.

2007-06-18  Werner Koch  <wk@g10code.com>

	* assuan-logging.c (load_libgpg_error, _assuan_gpg_strerror_r) 
	(_assuan_gpg_strsource): New.
	* assuan-handler.c (process_request) [W32]: Use these new
	functions for human understable error codes.

2007-06-12  Werner Koch  <wk@g10code.com>

	* assuan-io.c (_assuan_simple_read): Hack to allow reading from a
	socket.
	(_assuan_simple_write): Likewise.

2007-06-11  Werner Koch  <wk@g10code.com>

	* assuan-io-pth.c (_assuan_simple_read, _assuan_simple_write): Use
	pth versions also for W32.

2007-05-29  Werner Koch  <wk@g10code.com>

	* assuan-io-pth.c: Include sys/socket.h only if available.  Remove
	double inclusion of sys/wait.h
	
	* assuan-pipe-connect.c (build_w32_commandline): Make ARGV const.

	* assuan-pipe-server.c (is_valid_socket) [W32]: Do not define.

	* assuan-socket-server.c [W32]: Include ws2tcpip.h to define
	socklen_t.